# introduction-to-data-pipelines-and-apache-airflow

./: README.md
airflow/: Dockerfile  docker-compose.yml
airflow/mnt/dags/: day3_dag.py  dog_api_pipeline.py  everyday_dag.py  weather_api_dag.py  weather_dbt_dag.py
airflow/weather/: pyproject.toml
airflow/weather/weather/: .user.yml  profiles.yml
airflow/weather/weather/models/marts/: avgerage_temperature_in_bangkok.sql
airflow/weather/weather/models/staging/: _models.yml  stg_weathers.sql
airflow/weather/weather/tests/: assert_temperature_not_greater_than_60.sql
my_first_project/: my_first_data_pipeline.py  pyproject.toml
play_with_data_quality/: maiin.py  pyproject.toml
play_with_gx/: main.py  pyproject.toml
