[tool.poetry]
name = "play-with-data-quality"
version = "0.1.0"
description = ""
authors = ["wpanumas1980 <70122239+wpanumas1980@users.noreply.github.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
pandas = "^2.2.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
